--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-﻿aiohappyeyeballs==2.6.1
+gunicorn
+aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
@@ -84,3 +85,4 @@ uvicorn==0.37.0
 xxhash==3.6.0
 yarl==1.22.0
 zstandard==0.25.0
+
